--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MI PAGINA WEB</title>
 </head>
 <body>
     <center><h1> Estudiante de la CUC </h1>
@@ -12,6 +12,6 @@
         </center>
 </body>
 <body>
-    <h1>Estudiante</h1>
+    <small<h1>Estudiante: </h1>
 </body>
 </html>
