--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         </center>
 </body>
 <body>
-    <h1>Estudiante: </h1>
+    <h1>Estudiante: <small>Emell Enrique Gonzalez Vera</small></h1>
+    <h1>Semestre Actual: <small>Quinto Semestre </small></h1>
+    <h1>Carrera: <small>Ingenieria de Sistemas</small></h1>
 </body>
 </html>
