--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     
 
     <h1><center>Series favoritas: </center></h1>
-    <h1>TrollHunters <img src="https://static.wikia.nocookie.net/doblaje/images/1/19/Trollhuntersposter.jpg/revision/latest?cb=20210412230022&path-prefix=es" ></h1>
+    <h1>TrollHunters</h1>
+    
+    <h1><center><img src="https://static.wikia.nocookie.net/doblaje/images/1/19/Trollhuntersposter.jpg/revision/latest?cb=20210412230022&path-prefix=es" alt="Trollhunters Poster""float: left;"width="700" height="700" ></center></h1>
+        <div class="text">
+            <p>Trollhunters es una serie de animación digital producida por DreamWorks y desarrollada para Netflix. Ideada originalmente como un proyecto destinado para la gran pantalla, este título vio la luz posteriormente en forma de libro de ilustraciones publicado por el director mexicano Guillermo del Toro (La Cumbre Escarlata) y el autor Daniel Kraus.</p>
+            <p>La historia de Trollhunters narra las aventuras del grupo de residentes del vecindario ficticio conocido como Arcadia, donde descubrirán que existe un mundo debajo de su querida ciudad que es tan amplio y asombroso como ningún otro que conozcan en la superficie. Nadie en el pueblo cree en los rumores que indican que los trolls existen, pero el joven de 15 años Jim Jr. está por descubrir que son una amenaza bastante real y que durante la noche casi nadie está seguro.</p>
+            <p>Las tensiones entre los habitantes de Arcadia y estas monstruosas criaturas desencadenan un conflicto en el que todos tendrán que formar parte. Esta ficción televisiva plagada de criaturas fantásticas y mundos increíbles está creada por Del Toro y producida por DreamWorks, con quien ya trabajó en ocasiones anteriores.</p>
+        </div>
+    </div>
 </body>
 </html>
