--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
             <p>Las tensiones entre los habitantes de Arcadia y estas monstruosas criaturas desencadenan un conflicto en el que todos tendrán que formar parte. Esta ficción televisiva plagada de criaturas fantásticas y mundos increíbles está creada por Del Toro y producida por DreamWorks, con quien ya trabajó en ocasiones anteriores.</p>
         </div>
     </div>
+    <h1>Desafio Sendokai Champions</h1>
+    <h1><center><img src="https://static.wikia.nocookie.net/doblaje/images/f/f2/NF_Sendokai_Champions_320.jpg/revision/latest?cb=20130508150916&path-prefix=es" alt="Sendokai Poster"></center></h1>
 </body>
 </html>
