--- a/index.html
+++ b/index.html
@@ -40,5 +40,9 @@
         <div class="Texto_2">
             <p>La Tierra. Han pasado ya unos meses dese que Zak y sus amigos salvaran el universo del dominio del imperio Zorn, pero él se sigue sintiendo como un perdedor, se ha jugado la vida muchas veces y nunca ha recibido nada a cambio. Sin embargo, la visita del Maestro Tänpo y un problemas en la dimensión Agardis harán que Zak vuelva a enfundarse su brazalete y se sienta de nuevo un auténtico guerrero Sendokai.</p>
         </div>
+    <h1>Directores: </h1>
+    <h1><small>Guion: Guillem Dols y Dirigido: Freddy & Roger Cordoba Schwaneberg.</small></h1>
+    <h1>Actores de doblaje:</h1>
+    <h1><small>Jenny Beacraft, Alex Warner, Mark Schardan, Benjamin Nathan-Serio, Joshua Zamrycki, Molly Malcolm.</small></h1>
 </body>
 </html>
