--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>La historia de Trollhunters narra las aventuras del grupo de residentes del vecindario ficticio conocido como Arcadia, donde descubrirán que existe un mundo debajo de su querida ciudad que es tan amplio y asombroso como ningún otro que conozcan en la superficie. Nadie en el pueblo cree en los rumores que indican que los trolls existen, pero el joven de 15 años Jim Jr. está por descubrir que son una amenaza bastante real y que durante la noche casi nadie está seguro.</p>
             <p>Las tensiones entre los habitantes de Arcadia y estas monstruosas criaturas desencadenan un conflicto en el que todos tendrán que formar parte. Esta ficción televisiva plagada de criaturas fantásticas y mundos increíbles está creada por Del Toro y producida por DreamWorks, con quien ya trabajó en ocasiones anteriores.</p>
         </div>
-    <h1>Dirrectores : </h1>
+    <h1>Directores : </h1>
     <h1><small>Andrew L. Schmidt y Francisco Ruiz Velasco. </small></h1>
     <h1>Guionistas :</h1>
     <h1><small>Marc Guggenheim, Kevin Hageman, Dan Hageman, Guillermo del Toro.</small></h1>
